# ts_analysis

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
src/: tester.py
src/ts_analysis/: __init__.py
src/ts_analysis/analysis/: __init__.py  clustering.py  mds.py  pca.py
src/ts_analysis/dataframes/: Documentation.md  __init__.py  dframe.py  rdm.py
src/ts_analysis/imaging/: __init__.py  multivariate.py  univariate.py
src/ts_analysis/imaging_analysis/: aux.py  plot.py  rdm.py  regression.py  rsa.py  stats_analysis.py  stats_inference.py
src/ts_analysis/inference/: cluster.py
src/ts_analysis/plot/: __init__.py  matplot.py  miscplot.py  tsplot.py
src/ts_analysis/utilities/: __init__.py  aux.py  func.py  matop.py
