[metadata]
name = ts_analysis
version = 0.0.1
author = Feng Cheng
author_email = tedchengf@gmail.com
description = an analysis stream created for the Kuperberg NeuroCognition of Language Lab.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ts_analysis
project_urls =
    Bug Tracker = https://github.com/ts_analysis
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src